fix: hide scrollbar corner

--- a/src/sass/includes/_scrollbars.scss
+++ b/src/sass/includes/_scrollbars.scss
@@ -16,4 +16,12 @@
       background: transparent;
     }
   }
+
+  &::-webkit-scrollbar-corner {
+    /*
+    background-image: url(resources/corner.png);
+    background-repeat: no-repeat;
+    */
+    background-color: transparent;
+  }
 }
